--- a/styles/signup.css
+++ b/styles/signup.css
@@ -9,7 +9,7 @@
     align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
-    margin-top: 100px;
+    margin-top: 40px;
 }
 
 .innerDiv{
@@ -19,9 +19,8 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
-    /* margin: 0px 400px; */
-    /* margin-top: 80px; */
     height: 450px;
+    width: 300px;
     background-color: whitesmoke;
     border-radius: 30px;
     border-style: outset;
